# sre-agent

./: .gitignore  README.md  config.yaml  pyproject.toml  test_kube_client.py  test_llm_client.py
k8s/: alertmanager-config.yaml  alertmanager-deployment.yaml  alertmanager-service.yaml  custom-kubeconfig.yaml  prometheus-configmap.yaml  prometheus-service.yaml  values.yaml
src/sre_agent/: __init__.py  config.py  logging_config.py  main.py  models.py
src/sre_agent/agent/: __init__.py  diagnosis.py  memory.py  mitigation.py
src/sre_agent/clients/: __init__.py  kube_client.py  llm_client.py  prometheus_client.py
src/sre_agent/examples/: __init__.py  how_to_use_kubectl.txt  how_to_use_metrics.txt  kubectl.txt  prometheus.txt
src/sre_agent/mitigation/: __init__.py  action_stack.py  oracle.py  severity.py
src/sre_agent/visualization/: __init__.py  html_report.py
tests/: test_memory.py
tests/kind/: alert-rules.yaml  cleanup.sh  inject-fault.sh  run-e2e-test.sh  setup-cluster.sh  test-app.yaml
